--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
-    "@supabase/supabase-js": "2.44.4"
+    "@supabase/supabase-js": "2.44.4",
+    "moment": "2.30.1",
+    "moment-jalaali": "0.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
