--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.1.1",
     "@supabase/supabase-js": "2.44.4",
     "moment": "2.30.1",
-    "moment-jalaali": "0.10.0"
+    "moment-jalaali": "0.10.0",
+    "@google/genai": "^1.19.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
